ポートフォリオ_iwasawa07

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
       </div>
 
       <!-- あしらい１ -->
-      <div class="roop_wrapper">
-        <img src="./images/1x/roop_design01.svg" alt="" class="roop_design01" />
+      <div class="roop_wrapper01">
+        <img
+          class="roop_design01"
+          src="./images/1x/roop_design01.svg"
+          alt="∞マークの装飾"
+        />
       </div>
 
       <!-- PCナビゲーション -->
@@ -192,6 +196,14 @@
           </a>
         </div>
       </section>
+      <!-- あしらい２ -->
+      <div class="roop_wrapper02">
+        <img
+          class="roop_design02"
+          src="./images/1x/roop_design02.svg"
+          alt="∞マークの装飾"
+        />
+      </div>
 
       <!-- About -->
       <section class="about_section" id="about_me">
@@ -315,11 +327,20 @@
           </form>
         </div>
       </section>
-
-      <footer>
-        <p>&copy;2025 Kiyori Iwasawa</p>
-      </footer>
     </main>
+    <footer>
+      <!-- あしらい3 -->
+      <div class="roop_wrapper03">
+        <img
+          class="roop_design03"
+          src="./images/1x/roop_design03.svg"
+          alt="∞マークの装飾"
+        />
+      </div>
+
+      <p>&copy;2025 Kiyori Iwasawa</p>
+    </footer>
+
     <!-- jquery -->
     <script>
       $(function () {
