--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 コンセプト設定から実装まで、いまの自分にできる全てをこのポートフォリオに詰め込みました。“お客さまに長く愛されるデザインを届けたい”<br />“人と人のつながりを大切にし、長く寄り添える存在でありたい”<br />そんな想いから「∞（インフィニティ）」と「輪（つながり）」をコンセプトにしています。
               </p>
               <p class="works_sub_category">[ Category : design, coding ]</p>
-              <a class="works_btn" href="works_pf.html">View more</a>
+              <a class="works_btn" href="website_01.html">View more</a>
             </div>
 
             <div>
