--- a/works_all.html
+++ b/works_all.html
@@ -65,7 +65,7 @@
     </header>
 
     <!-- 共通：FVスクロールバー -->
-    <div class="scroll_down no_scroll">
+    <div class="scroll_down no_scroll_banner">
       <p>SCROLL</p>
     </div>
 
@@ -81,15 +81,18 @@
           <div class="flex_01_innner">
             <div class="title_flex">
               <p class="works_all_title">#Website</p>
-              <p>ポートフォリオ</p>
+              <p class="pc_portfolio">ポートフォリオ</p>
             </div>
-            <div class="flex_item">
-              <a href="#"
-                ><img
-                  class="flex_item_img"
-                  src="./images/1x/works_all01-80.jpg"
-                  alt="作品の画像1"
-              /></a>
+            <div class="sp_flex_01">
+              <div class="flex_item">
+                <a href="#"
+                  ><img
+                    class="flex_item_img"
+                    src="./images/1x/works_all01-80.jpg"
+                    alt="作品の画像1"
+                /></a>
+              </div>
+              <p class="works_all_SPtitle">ポートフォリオ</p>
             </div>
             <p class="works_all_category">[ Category : design, coding ]</p>
           </div>
@@ -199,18 +202,20 @@
             </div>
             <p class="works_all_category">[ Category : design ]</p>
           </div>
-
-          <!-- あしらい5 -->
-          <div class="roop_wrapper05">
-            <img
-              class="roop_design05"
-              src="./images/1x/roop_design05.svg"
-              alt="∞マークの装飾"
-            />
-          </div>
         </div>
       </section>
     </main>
+
+    <footer>
+      <!-- あしらい5 -->
+      <div class="roop_wrapper05">
+        <img
+          class="roop_design05"
+          src="./images/1x/roop_design05.svg"
+          alt="∞マークの装飾"
+        />
+      </div>
+    </footer>
 
     <!-- 共通：jquery -->
     <script>
