--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
         </h1>
         <picture>
-          <source srcset="./images/1x/FV_SP-80.jpg" media="(max-width:767px)" />
+          <source srcset="./images/1x/FV_SP-80.jpg" media="(max-width:750px)" />
           <img
             class="hero_img"
             src="./images/1x/fv-80.jpg"
@@ -58,10 +58,10 @@
             <a href="#top">/ Home</a>
           </li>
           <li class="header_list_item">
-            <a href="#works_all">/ Works</a>
+            <a href="works_all.html">/ Works</a>
           </li>
           <li class="header_list_item">
-            <a href="#about_me">/ About</a>
+            <a href="about_me.html">/ About</a>
           </li>
           <li class="header_list_item">
             <a href="#c-form"
@@ -82,10 +82,10 @@
             <a href="#top">/ Home</a>
           </li>
           <li class="sp_header_list_item">
-            <a href="#works_all">/ Works</a>
+            <a href="works_all.html">/ Works</a>
           </li>
           <li class="sp_header_list_item">
-            <a href="#about_me">/ About</a>
+            <a href="about_me.html">/ About</a>
           </li>
           <li class="sp_header_list_item">
             <a href="#c-form"
