--- a/website_01.html
+++ b/website_01.html
@@ -21,7 +21,7 @@
             <a href="works_all.html">/ Works</a>
           </li>
           <li class="header_list_item">
-            <a href="about.html">/ About</a>
+            <a href="about_me.html">/ About</a>
           </li>
           <li class="header_list_item">
             <a href="index.html#c-form"
@@ -34,7 +34,29 @@
         </ul>
       </nav>
 
-      <!--共通：SPナビゲーション banner_01.html 整えてコピーする-->
+      <!--共通：SPナビゲーション -->
+      <div class="works_banner_sp_btn"><span></span><span></span></div>
+      <nav class="works_banner_sp_nav">
+        <ul class="works_banner_sp_header_list">
+          <li class="works_banner_sp_header_list_item">
+            <a href="index.html#top">/ Home</a>
+          </li>
+          <li class="works_banner_sp_header_list_item">
+            <a href="works_all.html">/ Works</a>
+          </li>
+          <li class="works_banner_sp_header_list_item">
+            <a href="about_me.html">/ About</a>
+          </li>
+          <li class="works_banner_sp_header_list_item">
+            <a href="index.html#c-form"
+              ><img
+                class="works_banner_sp_header_list_item"
+                src="./images/1x/header_nav.svg"
+                alt="contact button"
+            /></a>
+          </li>
+        </ul>
+      </nav>
 
       <!-- 共通：SP固定メールあいこん -->
       <div class="mail_icon">
@@ -46,7 +68,6 @@
     <div class="scroll_down no_scroll">
       <p>SCROLL</p>
     </div>
-
     <!-- WORKS WEBSITE01 紹介ページ内容 -->
     <main class="site_main">
       <section class="site_wrapper01">
@@ -54,7 +75,7 @@
         <h3>ポートフォリオ</h3>
 
         <div class="site_img">
-          <video src="./images/1x/画面収録 works_pf.mov"></video>
+          <video src="./images/1x/画面収録 works_pf.mov" autoplay muted></video>
         </div>
 
         <p class="site_sub_category">[ Category : design, coding ]</p>
