--- a/works_all.html
+++ b/works_all.html
@@ -45,7 +45,7 @@
             <a href="#works_all_top">/ Works</a>
           </li>
           <li class="works_all_sp_header_list_item">
-            <a href="about.html#about_me">/ About</a>
+            <a href="about_me.html">/ About</a>
           </li>
           <li class="works_all_sp_header_list_item">
             <a href="index.html#c-form"
@@ -65,7 +65,7 @@
     </header>
 
     <!-- 共通：FVスクロールバー -->
-    <div class="scroll_down no_scroll_banner">
+    <div class="scroll_down no_scroll">
       <p>SCROLL</p>
     </div>
 
@@ -85,7 +85,7 @@
             </div>
             <div class="sp_flex_01">
               <div class="flex_item">
-                <a href="#"
+                <a href="website_01.html"
                   ><img
                     class="flex_item_img"
                     src="./images/1x/works_all01-80.jpg"
